--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
     
     <div class="creator">
       <img src="./images/image-avatar.png" alt="Jules" class="creator__image">
-      <span class="creator__of">
-        Creation of <p>Jules Wyvern</p>
-      </span></div>
+      <span class="creator__of">Creation of <p>Jules Wyvern</p></span></div>
     </section>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
